feat: add codegen of swagger
