# packages/books-service/src/business/comment/dto/create-comment.dto.ts
@@ -1,5 +1,13 @@
+import { ApiProperty } from "@nestjs/swagger"
+
 export class CreateCommentDto {
+
+  @ApiProperty()
   bookId: string
+
+  @ApiProperty()
   content: string
-  byUser: string
+
+  @ApiProperty()
+  byUserId: string
 }
